# hr-analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: People_Analytics.py
app/components/: charts.py  employee_table.py  pdf_report.py  sidebar.py  theme.py  translations.py
app/pages/: 1_Dashboard.py  2_Colaborador.py  3_Chat.py  4_Cadastro.py  5_Relatório.py  6_Comparador.py  7_Simulador.py  8_Monitoramento.py  9_Observabilidade.py
artifacts/: reference_distributions.parquet
artifacts/metrics/: feature_importance.csv  model_comparison.json
artifacts/models/: latest
artifacts/models/xgboost_20260419_202829/: metadata.json  model.joblib  preprocessor.joblib
docs/: arquitetura.md  decisoes_tecnicas.md  lideranca.md
notebooks/: 01_eda.ipynb
scripts/: predict_all.py  seed_db.py  train.py
src/hr_analytics/: config.py  logging_config.py  tracing.py
src/hr_analytics/agent/: guardrails.py  memory.py  orchestrator.py  tools.py
src/hr_analytics/api/: dependencies.py  errors.py  main.py
src/hr_analytics/api/routes/: agent.py  employees.py  explain.py  insights.py  monitoring.py  predict.py  users.py
src/hr_analytics/data/: database.py  feature_engineering.py  loader.py  preprocessing.py
src/hr_analytics/inference/: predictor.py  schemas.py  utils.py
src/hr_analytics/llm/: batch.py  client.py  prompts.py  schemas.py
src/hr_analytics/models/: db_models.py  explainer.py  registry.py  trainer.py
src/hr_analytics/monitoring/: alerts.py  drift.py  observability.py  reports.py
tests/: conftest.py  test_agent.py  test_api.py  test_drift.py  test_feature_engineering.py  test_guardrails.py  test_llm.py  test_ml.py  test_preprocessing.py
